--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
 
 <div class="container">
-  <img src="mobileIdCard060408.jpg" alt="신분증 이미지">
+  <img src="IMG_5931.jpeg" alt="신분증 이미지">
 
   <!-- 클릭 가능한 영역 (70% 위치) -->
   <div class="click-area" onclick="openPopup()"></div>
